--- a/java_project_restaurant/pom.xml
+++ b/java_project_restaurant/pom.xml
@@ -67,11 +67,18 @@
             <artifactId>spark-template-velocity</artifactId>
             <version>2.7.1</version>
         </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>RELEASE</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sparkjava</groupId>
+            <artifactId>spark-debug-tools</artifactId>
+            <version>0.5</version>
         </dependency>
     </dependencies>
 </project>
